06/11/08 Sylvain Gaillard
* New class PhredPhd to read sequence from phd files produced by the phred
  program
* Removed an unused method in PhredPoly

05/11/08 Sylvain Gaillard
* New methods Alphabet::getGeneric(states) implemented in AbstractAlphabet,
  DefaultAlphabet, DNA, RNA and ProteicAlphabet.
* New alphabet exception CharStateNotSupportedException.
* New class PhredPoly to read sequence from poly files produced by the phred
  program.
* Fixed heterozygous site read in PhredPoly.

09/10/08 Julien Dutheil
* New method SequenceTools::invert(Sequence).

24/09/08 Bastien Boussau & Julien Dutheil
* Memory leak fixed in Fasta and Mase readers.

21/07/08 -*- Version 1.4.1 -*-

26/06/08 Julien Dutheil
* Bug fixed in Clustal format.

20/04/08 Julien Dutheil
* New interface ISequence2 for reading alignments.

18/03/08 Julien Dutheil and Bastien Boussau
* Bowker's test for homogeneity implemented in SequenceTools.

08/02/08 Julien Dutheil
* Bug fixed in VectorSequenceContainer: method addSequence is now virtual!
  (thanks to Laurent Gueguen for pointing out this bug)!.

07/02/08 Julien Dutheil
* Added function isDNAAlphabet and isRNAAlphabet in AlphabetTools.
* Bug fixed in getAlphabetFromSequence method.
* Method getContent in Sequence and Site now outputs a reference.

18/01/08 -*- Version 1.4.0 -*-

09/01/08 Julien Dutheil
* All classes included in the new 'bpp' namespace.

06/11/07 Julien Dutheil
* New function SequenceContainerTools::merge.

02/10/07 Julien Dutheil
* New class GenBank, enabling GenBank sequence format support for input.
* Added new copy constructors from SequenceContainer in
  Vector[Site/Sequence]Container.
* New methods changeUnresolvedCharacterToGaps and changeGapsToUnknownCharacters in SymbolListTools.
* Bug fixed in changeUnresolvedCharacterToGaps in SiteContainerTools.

06/07/07 -*- Version 1.3.0 -*-

12/06/07 Julien Dutheil
* More tools in class alphabet (isGap, isUnresolved, etc.)
* New class DistanceMatrix, previously in phyllib.